# rov-interface

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.txt  justfile  package-program.ps1
.cargo/: config
assets/: controller_mappings.csv
design/: control.toml
driver/: pins.md  platformio.ini
driver/src/: BNO055.cpp  BNO055.h  commands.h  driver.ino  i2c_scanner.ino  main.cpp  main.h  respond.cpp  respond.h  respond.ino  src.ino  version.h
src/: config.rs  control_state.rs  errors.rs  main.rs  mock.rs  rov.rs  util.rs
src/control/: lights.rs  master.rs  mod.rs  motor.rs  servo.rs
src/screen/: control_rov.rs  mod.rs  port_select.rs
